R4ENC/Bindings/C/r4enc.h

typedef struct R4EncRuntime {
    uint64_t address;
    uint64_t generation;
} R4EncRuntime;
typedef struct R4EncEncoder {
    uint64_t address;
    uint64_t generation;
} R4EncEncoder;
typedef struct R4EncStartup {
    uint32_t version;
    uint32_t size;
    uint64_t application;
    uint64_t memory_limit;
    uint32_t max_encoders;
    uint32_t thread_limit;
} R4EncStartup;
typedef struct R4EncCapsQuery {
    uint32_t version;
    uint32_t size;
    uint32_t backend;
    uint32_t adapter_id;
    uint32_t codec;
    uint32_t profile;
    uint32_t bit_depth;
    uint32_t chroma;
} R4EncCapsQuery;
typedef struct R4EncCaps {
    uint32_t version;
    uint32_t size;
    R4EncCapsQuery query;
    uint32_t min_width;
    uint32_t min_height;
    uint32_t max_width;
    uint32_t max_height;
    uint32_t max_level;
    uint32_t input_formats;
    uint32_t rate_modes;
    uint32_t max_pending_frames;
    uint32_t max_packet_leases;
    uint32_t flags;
    uint64_t max_packet_bytes;
    uint64_t device_generation;
    uint64_t reset_generation;
} R4EncCaps;
typedef struct R4EncRate {
    uint32_t version;
    uint32_t size;
    uint32_t mode;
    uint32_t qp;
    uint32_t min_qp;
    uint32_t max_qp;
    uint64_t target_bps;
    uint64_t peak_bps;
    uint64_t buffer_bits;
} R4EncRate;
typedef struct R4EncBuffer {
    uint32_t id;
    uint32_t reserved0;
    uint64_t generation;
} R4EncBuffer;
typedef struct R4EncFence {
    uint32_t slot;
    uint32_t adapter_id;
    uint64_t timeline;
    uint64_t point;
    uint64_t device_generation;
    uint64_t reset_generation;
} R4EncFence;
typedef struct R4EncColor {
    uint32_t version;
    uint32_t size;
    uint32_t primaries;
    uint32_t transfer;
    uint32_t range;
    uint32_t matrix;
    uint32_t chroma_location;
    uint32_t bit_depth;
    uint32_t reference_white;
    uint32_t peak;
    uint32_t black;
    uint32_t flags;
} R4EncColor;
typedef struct R4EncPlane {
    R4EncBuffer buffer;
    R4EncBuffer reference;
    uint64_t offset;
    uint64_t pitch;
    uint64_t row_bytes;
    uint32_t rows;
    uint32_t reserved;
} R4EncPlane;
typedef struct R4EncConfig {
    uint32_t version;
    uint32_t size;
    R4EncCapsQuery query;
    uint64_t memory_limit;
    uint32_t width;
    uint32_t height;
    uint32_t fps_num;
    uint32_t fps_den;
    uint32_t pending_frames;
    uint32_t packet_leases;
    uint64_t max_packet_bytes;
    uint64_t work_timeout_ns;
    uint32_t gop_frames;
    uint32_t flags;
    R4EncRate rate;
    R4EncColor color;
} R4EncConfig;
typedef struct R4EncFrame {
    uint32_t version;
    uint32_t size;
    uint64_t stream_generation;
    uint64_t tag;
    int64_t pts_ns;
    uint64_t duration_ns;
    uint32_t format;
    uint32_t plane_count;
    R4EncPlane plane0;
    R4EncPlane plane1;
    R4EncPlane plane2;
    R4EncFence ready;
    uint32_t flags;
    uint32_t reserved;
} R4EncFrame;
typedef struct R4EncLease {
    R4EncEncoder encoder;
    uint64_t token;
    uint64_t stream_generation;
} R4EncLease;
typedef struct R4EncPacket {
    uint32_t version;
    uint32_t size;
    R4EncLease lease;
    uint64_t tag;
    int64_t pts_ns;
    int64_t dts_ns;
    uint64_t duration_ns;
    uint64_t data_address;
    uint64_t data_bytes;
    uint32_t flags;
    int32_t result;
} R4EncPacket;
typedef struct R4EncControl {
    uint32_t version;
    uint32_t size;
    uint64_t request_id;
    uint32_t operation;
    uint32_t reserved;
} R4EncControl;
typedef struct R4EncState {
    uint32_t version;
    uint32_t size;
    uint64_t stream_generation;
    uint64_t pending_request;
    uint64_t completed_request;
    uint64_t memory_bytes;
    uint64_t accepted_frames;
    uint64_t encoded_frames;
    uint64_t skipped_frames;
    uint64_t output_bytes;
    uint32_t phase;
    uint32_t queued_frames;
    uint32_t ready_packets;
    uint32_t leased_packets;
    int32_t last_error;
    uint32_t reserved;
} R4EncState;