R4ENC/Contract/Generated/implementation_abi.zig

// Generated by R4LContractGen. Do not edit.
const r4os = @import("r4os");

pub const InterfaceHeader = r4os.runtime_r4l.InterfaceHeader;

pub const module_name = "R4ENC";

pub const R4EncRuntime = extern struct {
    address: u64,
    generation: u64,
};

pub const R4EncEncoder = extern struct {
    address: u64,
    generation: u64,
};

pub const R4EncStartup = extern struct {
    version: u32,
    size: u32,
    application: u64,
    memory_limit: u64,
    max_encoders: u32,
    thread_limit: u32,
};

pub const R4EncCapsQuery = extern struct {
    version: u32,
    size: u32,
    backend: u32,
    adapter_id: u32,
    codec: u32,
    profile: u32,
    bit_depth: u32,
    chroma: u32,
};

pub const R4EncCaps = extern struct {
    version: u32,
    size: u32,
    query: R4EncCapsQuery,
    min_width: u32,
    min_height: u32,
    max_width: u32,
    max_height: u32,
    max_level: u32,
    input_formats: u32,
    rate_modes: u32,
    max_pending_frames: u32,
    max_packet_leases: u32,
    flags: u32,
    max_packet_bytes: u64,
    device_generation: u64,
    reset_generation: u64,
};

pub const R4EncRate = extern struct {
    version: u32,
    size: u32,
    mode: u32,
    qp: u32,
    min_qp: u32,
    max_qp: u32,
    target_bps: u64,
    peak_bps: u64,
    buffer_bits: u64,
};

pub const R4EncBuffer = extern struct {
    id: u32,
    reserved0: u32,
    generation: u64,
};

pub const R4EncFence = extern struct {
    slot: u32,
    adapter_id: u32,
    timeline: u64,
    point: u64,
    device_generation: u64,
    reset_generation: u64,
};

pub const R4EncColor = extern struct {
    version: u32,
    size: u32,
    primaries: u32,
    transfer: u32,
    range: u32,
    matrix: u32,
    chroma_location: u32,
    bit_depth: u32,
    reference_white: u32,
    peak: u32,
    black: u32,
    flags: u32,
};

pub const R4EncPlane = extern struct {
    buffer: R4EncBuffer,
    reference: R4EncBuffer,
    offset: u64,
    pitch: u64,
    row_bytes: u64,
    rows: u32,
    reserved: u32,
};

pub const R4EncConfig = extern struct {
    version: u32,
    size: u32,
    query: R4EncCapsQuery,
    memory_limit: u64,
    width: u32,
    height: u32,
    fps_num: u32,
    fps_den: u32,
    pending_frames: u32,
    packet_leases: u32,
    max_packet_bytes: u64,
    work_timeout_ns: u64,
    gop_frames: u32,
    flags: u32,
    rate: R4EncRate,
    color: R4EncColor,
};

pub const R4EncFrame = extern struct {
    version: u32,
    size: u32,
    stream_generation: u64,
    tag: u64,
    pts_ns: i64,
    duration_ns: u64,
    format: u32,
    plane_count: u32,
    plane0: R4EncPlane,
    plane1: R4EncPlane,
    plane2: R4EncPlane,
    ready: R4EncFence,
    flags: u32,
    reserved: u32,
};

pub const R4EncLease = extern struct {
    encoder: R4EncEncoder,
    token: u64,
    stream_generation: u64,
};

pub const R4EncPacket = extern struct {
    version: u32,
    size: u32,
    lease: R4EncLease,
    tag: u64,
    pts_ns: i64,
    dts_ns: i64,
    duration_ns: u64,
    data_address: u64,
    data_bytes: u64,
    flags: u32,
    result: i32,
};

pub const R4EncControl = extern struct {
    version: u32,
    size: u32,
    request_id: u64,
    operation: u32,
    reserved: u32,
};

pub const R4EncState = extern struct {
    version: u32,
    size: u32,
    stream_generation: u64,
    pending_request: u64,
    completed_request: u64,
    memory_bytes: u64,
    accepted_frames: u64,
    encoded_frames: u64,
    skipped_frames: u64,
    output_bytes: u64,
    phase: u32,
    queued_frames: u32,
    ready_packets: u32,
    leased_packets: u32,
    last_error: i32,
    reserved: u32,
};
pub const ok: i32 = 0;
pub const again: i32 = 1;
pub const eos: i32 = 2;
pub const backend_software: u32 = 0;
pub const backend_nvidia: u32 = 1;
pub const codec_h264: u32 = 1;
pub const profile_default: u32 = 0;
pub const profile_h264_baseline: u32 = 66;
pub const chroma_420: u32 = 1;
pub const format_nv12: u32 = 1;
pub const format_yuv420p: u32 = 3;
pub const formats_nv12: u32 = 1;
pub const formats_yuv420p: u32 = 4;
pub const rate_cqp: u32 = 0;
pub const rate_cbr: u32 = 1;
pub const rate_vbr: u32 = 2;
pub const rates_cqp: u32 = 1;
pub const rates_cbr: u32 = 2;
pub const rates_vbr: u32 = 4;
pub const config_allow_skip: u32 = 1;
pub const frame_force_idr: u32 = 1;
pub const packet_key: u32 = 1;
pub const packet_config: u32 = 2;
pub const packet_skipped: u32 = 4;
pub const skip_rate_control: u32 = 1;
pub const phase_open: u32 = 0;
pub const phase_draining: u32 = 1;
pub const phase_drained: u32 = 2;
pub const phase_aborting: u32 = 3;
pub const phase_closing: u32 = 4;
pub const phase_closed: u32 = 5;
pub const phase_failed: u32 = 6;
pub const control_query: u32 = 0;
pub const control_drain: u32 = 1;
pub const control_abort: u32 = 2;
pub const control_close: u32 = 3;
pub const color_reference_white: u32 = 1;
pub const color_luminance: u32 = 2;
pub const color_unspecified: u32 = 2;
pub const chroma_unspecified: u32 = 0;
pub const chroma_left: u32 = 1;
pub const chroma_center: u32 = 2;
pub const chroma_top_left: u32 = 3;
pub const error_cancelled: i32 = -10;
pub const error_invalid: i32 = -1;
pub const error_unsupported: i32 = -2;
pub const error_busy: i32 = -3;
pub const error_no_memory: i32 = -4;
pub const error_stale: i32 = -5;
pub const error_encode: i32 = -6;
pub const error_device_lost: i32 = -7;
pub const error_closed: i32 = -8;
pub const error_internal: i32 = -9;

pub const encode_v1_export_name = "ENCODE_V1";
pub const encode_v1_revision: u16 = 1;
pub const encode_v1_header = InterfaceHeader{
    .magic = r4os.runtime_r4l.interface_magic,
    .header_version = r4os.runtime_r4l.interface_header_version,
    .flags = 0,
    .size = 104,
    .abi_major = 1,
    .abi_minor = 1,
    .interface_id_lo = 0x313030434e453452,
    .interface_id_hi = 0x313045444f434e45,
};
pub const EncodeV1OpenFn = *const fn (startup: *const R4EncStartup, runtime: *R4EncRuntime) callconv(.c) i32;
pub const EncodeV1QueryCapsFn = *const fn (runtime: *const R4EncRuntime, query: *const R4EncCapsQuery, output: *R4EncCaps) callconv(.c) i32;
pub const EncodeV1CreateFn = *const fn (runtime: *const R4EncRuntime, config: *const R4EncConfig, encoder: *R4EncEncoder) callconv(.c) i32;
pub const EncodeV1SendFn = *const fn (encoder: *const R4EncEncoder, frame: *const R4EncFrame) callconv(.c) i32;
pub const EncodeV1ReceiveFn = *const fn (encoder: *const R4EncEncoder, packet: *R4EncPacket) callconv(.c) i32;
pub const EncodeV1ReleaseFn = *const fn (lease: *const R4EncLease) callconv(.c) i32;
pub const EncodeV1ControlFn = *const fn (encoder: *const R4EncEncoder, request: *const R4EncControl, state: *R4EncState) callconv(.c) i32;
pub const EncodeV1DestroyFn = *const fn (encoder: *const R4EncEncoder) callconv(.c) i32;
pub const EncodeV1FinishFn = *const fn (runtime: *const R4EncRuntime, timeout_ns: u64) callconv(.c) i32;
pub const EncodeV1 = extern struct {
    header: InterfaceHeader,
    open: EncodeV1OpenFn,
    query_caps: EncodeV1QueryCapsFn,
    create: EncodeV1CreateFn,
    send: EncodeV1SendFn,
    receive: EncodeV1ReceiveFn,
    release: EncodeV1ReleaseFn,
    control: EncodeV1ControlFn,
    destroy: EncodeV1DestroyFn,
    finish: EncodeV1FinishFn,
};
